--- a/node-mocking/mock-srv/package.json
+++ b/node-mocking/mock-srv/package.json
@@ -21,5 +21,8 @@
     "fastify": "^5.0.0",
     "fastify-cli": "^7.4.0",
     "fastify-plugin": "^5.0.0"
+  },
+  "overrides": {
+    "yargs-parser": "20.2.9"
   }
 }
