--- a/node-mocking/mock-srv/package.json
+++ b/node-mocking/mock-srv/package.json
@@ -20,7 +20,8 @@
     "@fastify/sensible": "^6.0.0",
     "fastify": "^5.0.0",
     "fastify-cli": "^7.4.0",
-    "fastify-plugin": "^5.0.0"
+    "fastify-plugin": "^5.0.0",
+    "fastify-websocket": "^3.2.2"
   },
   "overrides": {
     "yargs-parser": "20.2.9"
