--- a/node-mocking/mock-srv/package.json
+++ b/node-mocking/mock-srv/package.json
@@ -18,10 +18,10 @@
     "@fastify/autoload": "^6.3.1",
     "@fastify/cors": "^11.2.0",
     "@fastify/sensible": "^6.0.0",
+    "@fastify/websocket": "^11.2.0",
     "fastify": "^5.0.0",
-    "fastify-cli": "^7.4.0",
-    "fastify-plugin": "^5.0.0",
-    "fastify-websocket": "^3.2.2"
+    "fastify-cli": "^7.4.1",
+    "fastify-plugin": "^5.0.0"
   },
   "overrides": {
     "yargs-parser": "20.2.9"
