--- a/node-mocking/my-cli/package.json
+++ b/node-mocking/my-cli/package.json
@@ -12,6 +12,7 @@
   "bin": "./cmd.js",
   "type": "module",
   "dependencies": {
-    "got": "^14.6.6"
+    "got": "^14.6.6",
+    "minimist": "^1.2.8"
   }
 }
